--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="head1 frist">Tasks <span class="head2">List</span></span>
     </header>
 
-    <h1 id="noItems" class="">No Items Lists in this Page</h1>
+    <h1 id="noItems" class=""></h1>No Items Lists in this Page</h1>
 
 <div class="parent">
     
